<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="createViewModel"
            type="ir.javadhashemi.debit.presentation.create.CreateViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_container"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/create_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/create_tool_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/main_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"

                android:padding="@dimen/margin16">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/samim_family"
                    android:text="@string/add_title"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/text_size_large"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/type_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin16"
                    android:onRadioGroupChangeListener="@{createViewModel.type}"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_debit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin16"
                        android:layout_marginRight="@dimen/margin16"
                        android:button="@null"
                        android:drawableEnd="@drawable/custom_radio"
                        android:drawableRight="@drawable/custom_radio"
                        android:drawablePadding="@dimen/margin10"
                        android:fontFamily="@font/samim_family"
                        android:padding="@dimen/margin8"
                        android:text="@string/debit_label"
                        android:textColor="@color/textColorSecondary"
                        android:textSize="@dimen/text_size_normal" />

                    <RadioButton
                        android:id="@+id/radio_credit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin16"
                        android:layout_marginLeft="@dimen/margin16"
                        android:button="@null"
                        android:drawableEnd="@drawable/custom_radio"
                        android:drawableRight="@drawable/custom_radio"
                        android:drawablePadding="@dimen/margin10"
                        android:fontFamily="@font/samim_family"
                        android:padding="@dimen/margin8"
                        android:text="@string/credit_label"
                        android:textColor="@color/textColorSecondary"
                        android:textSize="@dimen/text_size_normal" />
                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin8"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ic_contact"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="@dimen/margin5"
                        android:layout_marginRight="@dimen/margin5"
                        android:contentDescription="@string/from_who_text"
                        android:padding="@dimen/margin5"
                        android:src="@drawable/ic_account" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/commonTextInputLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin8"
                        android:layout_weight="1"
                        android:errorMessage="@{createViewModel.personError}"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/from_who"
                            style="@style/commonEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/from_who_text"
                            android:inputType="text"
                            android:textChangeListenerObserver="@{createViewModel.fromWho}" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin8"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/commonTextInputLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin8"
                        android:layout_weight="1"
                        android:errorMessage="@{createViewModel.moneyError}"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/how_much"
                            style="@style/commonEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/how_much"
                            android:inputType="numberDecimal"
                            android:textChangeListenerObserver="@{createViewModel.howMuch}" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin8"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/has_deadline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="@dimen/margin10"
                        android:layout_marginRight="@dimen/margin10"
                        android:button="@null"
                        android:drawableEnd="@drawable/custom_checkbox"
                        android:drawableRight="@drawable/custom_checkbox"
                        android:drawablePadding="@dimen/margin10"
                        android:fontFamily="@font/samim_family"
                        android:gravity="center"
                        android:onCheckboxChangeListener="@{createViewModel.noDeadline}"
                        android:text="@string/not_defined_text"
                        android:textColor="@color/textColorSecondary" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/commonTextInputLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin8"
                        android:layout_weight="1"
                        android:errorMessage="@{createViewModel.dateError}"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/when"
                            style="@style/commonEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="@{createViewModel.noDeadline ? false : true}"
                            android:focusableInTouchMode="false"
                            android:hint="@string/when_title"
                            android:inputType="text"
                            android:text="@{createViewModel.deadline}" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin8"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/commonTextInputLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin8"
                        android:layout_weight="1"
                        android:errorMessage="@{createViewModel.descError}"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/description"
                            style="@style/commonEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/description_text"
                            android:inputType="textMultiLine"
                            android:textChangeListenerObserver="@{createViewModel.description}" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/confirm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin16"
                        android:fontFamily="@font/samim_family"
                        android:onClick="@{()->createViewModel.save()}"
                        android:text="@string/confirm_text"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_normal"
                        app:backgroundTint="@color/colorPrimaryDark" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin16"
                        android:layout_marginLeft="@dimen/margin16"
                        android:layout_marginTop="@dimen/margin16"
                        android:fontFamily="@font/samim_family"
                        android:onClick="@{()->createViewModel.dismiss()}"
                        android:text="@string/decline_text"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/text_size_normal"
                        app:backgroundTint="@color/white" />

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>